@startuml

title __DATACATALOGUE's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Frontend.Fragment {
      package sud_tanj.com.icare.Frontend.Fragment.DataCatalogue {
        class DataFlowListener {
            - dataStatusButton : Button
            - weakHandler : WeakHandler
            {static} + listen()
            + onChildAdded()
            + onChildChanged()
            + onChildRemoved()
            + onChildMoved()
            + onCancelled()
            + run()
            # DataFlowListener()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Frontend.Fragment {
      package sud_tanj.com.icare.Frontend.Fragment.DataCatalogue {
        class DataUi {
            # dataRecyclerView : SuperRecyclerView
            - fastAdapter : FastAdapter
            # numberUnit : RecyclerView
            - tempMessage : ChatMessage
            + init()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Frontend.Fragment {
      package sud_tanj.com.icare.Frontend.Fragment.DataCatalogue {
        class FirebaseDataAdapter {
            {static} + MUTE_ENABLE : String
            {static} + MUTE_DISABLED : String
            + FirebaseDataAdapter()
            # onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Frontend.Fragment {
      package sud_tanj.com.icare.Frontend.Fragment.DataCatalogue {
        class DataHolder {
            - titleView : TextView
            - dataStatusButton : Button
            - muteButton : Button
            + DataHolder()
            + getTitleView()
        }
      }
    }
  }
  

  DataFlowListener -up-|> ChildEventListener
  DataFlowListener -up-|> Runnable
  DataUi -up-|> Fragment
  DataUi o-- FirebaseDataAdapter : firebaseDataAdapter
  SavedState -up-|> Parcelable
  FirebaseDataAdapter -up-|> FirebaseRecyclerAdapter
  FirebaseDataAdapter o-- DataUi : dataUi
  FirebaseDataAdapter +-down- DataHolder
  DataHolder -up-|> ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
